# pollard

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  release-plz.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: plugin-release.yml  release-plz.yml  test.yml
docs/superpowers/plans/: 2026-04-28-event-param.md  2026-04-28-pollard-mvp.md  2026-05-06-profile-views.md
docs/superpowers/specs/: 2026-04-28-pollard-design.md  2026-05-06-view-presets-cookbook.md
example/: Cargo.toml  README.md  SLIDES.md
example/transcripts/: README.md  log_p99-with-pollard.md  log_p99-without-pollard.md  matmul-with-pollard.md  matmul-without-pollard.md  nested_join-with-pollard.md  nested_join-without-pollard.md  page_fault-with-pollard.md  page_fault-without-pollard.md  top_funcs.py
example/transcripts-eval/iteration-1/: benchmark.md
example/transcripts-eval/iteration-1/log_p99/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/log_p99/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/matmul/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/matmul/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/nested_join/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/nested_join/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/page_fault/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/page_fault/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/pipeline/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/pipeline/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/pipeline_inlined/with-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/pipeline_inlined/without-pollard/: timing.json  transcript.md
example/transcripts-eval/iteration-1/pipeline_inlined/without-pollard-no-hint/: timing.json  transcript.md
examples/: measure_rss.rs
skills/pollard-doctor/: SKILL.md
skills/profile-recording/: SKILL.md
skills/view-presets/: SKILL.md
src/: error.rs  lib.rs  main.rs  matching.rs  registry.rs  serde_util.rs  session.rs
src/profile/: event_source.rs  load.rs  mod.rs  parsed.rs  raw.rs  symbolicate.rs  transforms.rs
src/query/: address_to_function.rs  asm.rs  call_tree.rs  compare.rs  compare_functions.rs  describe.rs  event.rs  filters.rs  folded.rs  mod.rs  source.rs  stacks_containing.rs  summary.rs  top_functions.rs  top_groups.rs  view_stats.rs
src/tools/: budget.rs  drill_down.rs  lifecycle.rs  mod.rs  query.rs  views.rs
tests/: build_fixtures.rs  e2e_source_asm.rs  event_perf_counters.rs  mcp_integration.rs  smoke.rs  snapshot.rs  views_e2e.rs
tests/fixtures/: linear_chain.json  minimal_profile.json  paths_to.json  source_attribution.json  stacks_containing.json  tiny_program.c  two_events.json  two_functions.json
tests/helpers/: synthetic.rs
tests/snapshots/: snapshot__describe_snapshot.snap  snapshot__summary_snapshot.snap  snapshot__top_functions_snapshot.snap
