[package]
name = "pollard"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "MCP server that exposes Firefox-format performance profiles to AI coding assistants."
repository = "https://github.com/<user>/pollard"
keywords = ["profiling", "mcp", "ai", "firefox-profiler", "samply"]
categories = ["development-tools::profiling", "command-line-utilities"]

[dependencies]
rmcp = { version = "1.5", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "process"] }
wholesym = "0.8"
samply-api = "0.24"
samply-symbols = "0.24"
fxprof-processed-profile = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
regex = "1"
thiserror = "2"
debugid = "0.8"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
tempfile = "3"

[lints.clippy]
type_complexity = "allow"
option_map_unit_fn = "allow"
wrong_self_convention = "allow"
should_implement_trait = "allow"
module_inception = "allow"

bool_comparison = "warn"
borrow_interior_mutable_const = "warn"
borrowed_box = "warn"
builtin_type_shadow = "warn"
clone_on_ref_ptr = "warn"
crosspointer_transmute = "warn"
dbg_macro = "warn"
deref_addrof = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
double_must_use = "warn"
double_parens = "warn"
duplicate_underscore_argument = "warn"
excessive_precision = "warn"
extra_unused_lifetimes = "warn"
from_over_into = "warn"
match_overlapping_arm = "warn"
must_use_unit = "warn"
mut_mutex_lock = "warn"
needless_borrow = "warn"
needless_pass_by_ref_mut = "warn"
needless_question_mark = "warn"
needless_return = "warn"
no_effect = "warn"
panicking_overflow_checks = "warn"
partialeq_ne_impl = "warn"
print_literal = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
redundant_field_names = "warn"
redundant_pattern = "warn"
redundant_slicing = "warn"
redundant_static_lifetimes = "warn"
same_item_push = "warn"
shadow_unrelated = "warn"
single_component_path_imports = "warn"
suspicious_assignment_formatting = "warn"
suspicious_else_formatting = "warn"
suspicious_unary_op_formatting = "warn"
todo = "warn"
transmutes_expressible_as_ptr_casts = "warn"
unnecessary_cast = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_mut_passed = "warn"
unnecessary_unwrap = "warn"
unused_async = "warn"
useless_asref = "warn"
useless_conversion = "warn"
useless_format = "warn"
wildcard_in_or_patterns = "warn"
write_literal = "warn"
zero_divided_by_zero = "warn"
zero_prefixed_literal = "warn"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 4
