[package]
name = "pollard-demo"
version = "0.0.0"
edition = "2024"
publish = false
description = "Demo binaries for the pollard MCP profile-analysis presentation."

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "log_p99"
path = "src/bin/log_p99.rs"

[[bin]]
name = "matmul"
path = "src/bin/matmul.rs"

[[bin]]
name = "nested_join"
path = "src/bin/nested_join.rs"

[[bin]]
name = "page_fault"
path = "src/bin/page_fault.rs"

[[bin]]
name = "pipeline"
path = "src/bin/pipeline.rs"

[[bin]]
name = "pipeline_inlined"
path = "src/bin/pipeline_inlined.rs"
